package com.example.androidlearning.google_codelabs

object C {

    object Tag {
        const val main_activity_screen = "main_activity_screen"
        const val go_to_buildBasicLayoutActivity_button =  "go_to_buildBasicLayoutActivity_button"
        const val go_to_composeEssentialsActivity_button = "go_to_composeEssentialsActivity_button"

        const val build_basic_layout_screen = "build_basic_layout_screen"
        const val buildBasicLayoutActivity_bottom_bar_business_card_item = "buildBasicLayoutActivity_bottom_bar_business_card_item"
        const val buildBasicLayoutActivity_bottom_bar_birthday_card_item = "buildBasicLayoutActivity_bottom_bar_birthday_card_item"
        const val buildBasicLayoutActivity_bottom_bar_compose_article_item = "buildBasicLayoutActivity_bottom_bar_compose_article_item"
        const val buildBasicLayoutActivity_bottom_bar_task_manager_item = "buildBasicLayoutActivity_bottom_bar_task_manager_item"
        const val buildBasicLayoutActivity_bottom_bar_compose_quadrant_item = "buildBasicLayoutActivity_bottom_bar_compose_quadrant_item"

        const val compose_essentials_layout_screen = "build_basic_layout_screen"
        const val composeEssentials_bottom_bar_my_soothe_item = "composeEssentials_bottom_bar_my_soothe_item"
        const val composeEssentials_bottom_bar_wellness_item = "composeEssentials_bottom_bar_wellness_item"

        const val business_card_screen = "business_card_screen"
        const val business_card_bg_image = "business_card_bg_image"
        const val business_card_person_avatar = "business_card_person_avatar"
        const val business_card_person_name = "business_card_person_name"
        const val business_card_person_status = "business_card_person_status"
        const val business_card_contacts_phone_icon = "business_card_contacts_phone_icon"
        const val business_card_contacts_telegram_icon = "business_card_contacts_telegram_icon"
        const val business_card_contacts_email_icon = "business_card_contacts_email_icon"
        const val business_card_contacts_phone_text = "business_card_contacts_phone_text"
        const val business_card_contacts_telegram_text = "business_card_contacts_telegram_text"
        const val business_card_contacts_email_text = "business_card_contacts_email_text"

        const val birthday_card_screen = "birthday_card_screen"
        const val birthday_card_bg_image = "birthday_card_bg_image"
        const val birthday_card_message_text = "birthday_card_message_text"
        const val birthday_card_from_text = "birthday_card_from_text"

        const val compose_article_screen = "compose_article_screen"
        const val compose_article_image = "compose_article_image"
        const val compose_article_topic = "compose_article_topic"
        const val compose_article_first_paragraph = "compose_article_first_paragraph"
        const val compose_article_second_paragraph = "compose_article_second_paragraph"

        const val task_manager_screen = "task_manager_screen"
        const val task_manager_image = "task_manager_image"
        const val task_manager_first_text = "task_manager_first_text"
        const val task_manager_second_text = "task_manager_second_text"
        const val task_manager_first_button = "task_manager_first_button"
        const val task_manager_second_button = "task_manager_second_button"
        const val task_manager_third_button = "task_manager_third_button"
        const val task_manager_fourth_button = "task_manager_fourth_button"

        const val compose_quadrant_screen = "compose_quadrant_screen"
        const val compose_quadrant_text_composable_title_text = "compose_quadrant_text_composable_title_text"
        const val compose_quadrant_text_composable_text = "compose_quadrant_text_composable_text"
        const val compose_quadrant_image_composable_title_text = "compose_quadrant_image_composable_title_text"
        const val compose_quadrant_image_composable_text = "compose_quadrant_image_composable_text"
        const val compose_quadrant_row_composable_title_text = "compose_quadrant_row_composable_title_text"
        const val compose_quadrant_row_composable_text = "compose_quadrant_row_composable_text"
        const val compose_quadrant_column_composable_title_text = "compose_quadrant_column_composable_title_text"
        const val compose_quadrant_column_composable_text = "compose_quadrant_column_composable_text"
    }
}