...
    <string name="placeholder_search">Search</string>
    <string name="go_to_build_basic_layout_activity">Go to BuildBasicLayoutActivity</string>
    <string name="go_to_compose_essentials_activity">Go to ComposeEssentialsActivity</string>
    <string name="business_card_contacts_phone_text">8 (800) 555 35 35</string>
    <string name="business_card_contacts_telegram_text">\@beathunter</string>
    <string name="business_card_contacts_email_text">beathunter@gmail.com</string>
    <string name="business_card_person_name_text">Nikita</string>
    <string name="business_card_person_status_text">Android Enjoyer</string>
    <string name="push_me_text">PUSH ME</string>
    <string name="repeat_text">Repeat</string>

</resources>
